Refactor HelpSupport on a PropertyItem.
Instead of making a PropertyItem implementation implement
HelpSupport, make HelpSupport a field of PropertyItem.
This makes the feature more discoverable, and removes the
need to implement extra interfaces.

Also: change HelpSupport for help and secondaryHelp to
supply AnAction. This allows an event to pass crucial context
data to the help implementation. It also helps with isolating
the help implementation in a action class.

Minor: Isolate the help key registration in a HelpSupportBinding
class.

Bug: 121259587
Test: NA
Change-Id: I454e278a14878f324b89e545f28da21f4ff80784

--- a/designer/src/com/android/tools/idea/common/property2/README.md.html
+++ b/designer/src/com/android/tools/idea/common/property2/README.md.html
@@ -90,10 +90,10 @@ interface which should be used for all properties. The most important fields are
 - browseButton: Describe a button to show on the right side of the property
   editor.
 - colorButton: Describe a button to show inside a color control.
-
-In addition an implementation could also implement the following interfaces:
-- [HelpSupport.kt](http://cs/android/tools/adt/idea/designer/src/com/android/tools/idea/common/property2/api/HelpSupport.kt)
-   for supporting F1 and shift-F1 help while an editor has focus.
+- helpSupport: Specifies actions for supporting help on F1 and shift-F1. See
+  [HelpSupport.kt](http://cs/android/tools/adt/idea/designer/src/com/android/tools/idea/common/property2/api/HelpSupport.kt)
+- editingSupport: Specifies validation and completion support for the property. See
+  [EditingSupport.kt](http://cs/android/tools/adt/idea/adt-ui-model/src/main/java/com/android/tools/adtui/model/stdui/EditingSupport.kt)
 
 InspectorBuilder
 -------------------------------------------------------------------------------
